code javascript séparé et plus léger

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -182,197 +182,14 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript">
-    $(function () {
-        var minNumber = 1;
-        var maxNumber = 6;
-        var dice = $('.dice');
-        var cumulDiceGamer1 = 0;
-        var firstTime = true;
 
-        dice.children().hide();
-
-        // get a random gamer
-        var len = $('.stats').length;
-        var rowGamer = Math.floor( Math.random() * len );
-        var randomGamer = $('.stats:nth('+ rowGamer +') > p:first').text();
-        $('.messageInfo strong').append(randomGamer);
-
-        $('button').on('click', function(e) {
-            e.preventDefault();
-            var randomNumber = Math.floor(Math.random() * maxNumber) + minNumber;
-            dice.children().hide();
-            
-            $('.dice .die' + randomNumber).show();
-            cumulDiceGamer1 += randomNumber;
-            if (cumulDiceGamer1 > 64) {
-                cumulDiceGamer1 -= randomNumber;
-            } 
-
-            $('.board td').each(function() {
-                $(this).removeClass('activeCase');
-                if ($(this).text() == cumulDiceGamer1) {
-                    $(this).addClass('activeCase');
-                    $('.questions').show();
-
-                    var url = "{{ path('get_random_question', { 'id': 0 }) }}";
-                    
-                    if ($(this).text() % 4 == 1) {
-                        url = url.replace('0', '{{ subjects[0].id }}');
-                        $.ajax({
-                            url: url,
-                            type: 'GET',
-                            dataType: 'json',
-                            success: function (response) {
-
-                                if (!firstTime) {
-                                    var classStr = $('.questions').attr('class');
-                                    var lastClass = classStr.substr( classStr.lastIndexOf(' ') + 1);
-                                    $('.questions').removeClass(lastClass);
-                                }
-                                $('.questions').addClass('blue');
-                                $('.questions .question').html(response.question);
-                                $('.infoQuestion .difficulty').html(response.difficulty);
-                                $('.infoQuestion .topic').html(response.topic.nameTopic);
-                                $('.infoQuestion .subject').html(response.topic.subject.nameSubject);
-                                $('.infoQuestion .schoolLevel').html(response.schoolClass.schoolClass);
-                                $('.questions .answers').html('');
-                                var index = 0;
-                                response.answers.forEach(function(data) {
-                                    
-                                    $('.questions .answers').append('<div class="answer answer'+ index +'">'+ data.answer +'</div>');
-                                    
-                                    index++;
-                                })
-                                var parent = $('.questions .answers');
-                                var divsAnswer = parent.children();
-                                while(divsAnswer.length) {
-                                    parent.append(divsAnswer.splice(Math.floor(Math.random() * divsAnswer.length), 1));
-                                }
-                                firstTime = false;                                
-                            },
-                            error: function(response) {
-                                alert('erreur1');
-                            }
-                        });   
-
-                    } else if ($(this).text() % 4 == 2) {
-                        url = url.replace('0', '{{ subjects[1].id }}');
-                        $.ajax({
-                            url: url,
-                            type: 'GET',
-                            dataType: 'json',
-                            success: function (response) {
-                                if (!firstTime) {
-                                    var classStr = $('.questions').attr('class');
-                                    var lastClass = classStr.substr( classStr.lastIndexOf(' ') + 1);
-                                    $('.questions').removeClass(lastClass);
-                                }
-                                $('.questions').addClass('yellow');
-                                $('.questions .question').html(response.question);
-                                $('.infoQuestion .difficulty').html(response.difficulty);
-                                $('.infoQuestion .topic').html(response.topic.nameTopic);
-                                $('.infoQuestion .subject').html(response.topic.subject.nameSubject);
-                                $('.infoQuestion .schoolLevel').html(response.schoolClass.schoolClass);
-                                $('.questions .answers').html('');
-                                var index = 0;
-                                response.answers.forEach(function(data) {
-                                    $('.questions .answers').append('<div class="answer answer'+ index +'">'+ data.answer +'</div>');
-                                    index++;
-                                })
-                                var parent = $('.questions .answers');
-                                var divsAnswer = parent.children();
-                                while(divsAnswer.length) {
-                                    parent.append(divsAnswer.splice(Math.floor(Math.random() * divsAnswer.length), 1));
-                                }
-                                firstTime = false;                                
-                            },
-                            error: function(response) {
-                                alert('erreur2');                                
-                            }
-                        });
-                    } else if ($(this).text() % 4 == 3) {
-                        url = url.replace('0', '{{ subjects[2].id }}');
-                        $.ajax({
-                            url: url,
-                            type: 'GET',
-                            dataType: 'json',
-                            success: function (response) {
-                                if (!firstTime) {
-                                    var classStr = $('.questions').attr('class');
-                                    var lastClass = classStr.substr( classStr.lastIndexOf(' ') + 1);
-                                    $('.questions').removeClass(lastClass);
-                                }
-                                $('.questions').addClass('green');
-                                $('.questions .question').html(response.question);
-                                $('.infoQuestion .difficulty').html(response.difficulty);
-                                $('.infoQuestion .topic').html(response.topic.nameTopic);
-                                $('.infoQuestion .subject').html(response.topic.subject.nameSubject);
-                                $('.infoQuestion .schoolLevel').html(response.schoolClass.schoolClass);
-                                $('.questions .answers').html('');
-                                var index = 0;
-                                response.answers.forEach(function(data) {
-                                    $('.questions .answers').append('<div class="answer answer'+ index +'">'+ data.answer +'</div>');
-                                    index++;
-                                })
-                                var parent = $('.questions .answers');
-                                var divsAnswer = parent.children();
-                                while(divsAnswer.length) {
-                                    parent.append(divsAnswer.splice(Math.floor(Math.random() * divsAnswer.length), 1));
-                                }
-                                firstTime = false;                                
-                            },
-                            error: function(response) {
-                                alert('erreur3');
-                            }
-                        });
-                    } else if ($(this).text() % 4 == 0) {
-                        url = url.replace('0', '{{ subjects[3].id }}');
-                        $.ajax({
-                            url: url,
-                            type: 'GET',
-                            dataType: 'json',
-                            success: function (response) {
-                                if (!firstTime) {
-                                    var classStr = $('.questions').attr('class');
-                                    var lastClass = classStr.substr( classStr.lastIndexOf(' ') + 1);
-                                    $('.questions').removeClass(lastClass);
-                                }
-                                $('.questions').addClass('red');
-                                $('.questions .question').html(response.question);
-                                $('.infoQuestion .difficulty').html(response.difficulty);
-                                $('.infoQuestion .topic').html(response.topic.nameTopic);
-                                $('.infoQuestion .subject').html(response.topic.subject.nameSubject);
-                                $('.infoQuestion .schoolLevel').html(response.schoolClass.schoolClass);
-                                $('.questions .answers').html('');
-                                var index = 0;
-                                response.answers.forEach(function(data) {
-                                    $('.questions .answers').append('<div class="answer answer'+ index +'">'+ data.answer +'</div>');
-                                    index++;
-                                })
-                                var parent = $('.questions .answers');
-                                var divsAnswer = parent.children();
-                                while(divsAnswer.length) {
-                                    parent.append(divsAnswer.splice(Math.floor(Math.random() * divsAnswer.length), 1));
-                                }
-                                firstTime = false;
-                            },
-                            error: function(response) {
-                                alert('erreur4');
-                            }
-                        });
-                    }
-                }
-            })
+        var url = "{{ path('get_random_question', { 'id': 0 }) }}";
+        var url0 = url.replace('0', '{{ subjects[0].id }}');        
+        var url1 = url.replace('0', '{{ subjects[1].id }}');        
+        var url2 = url.replace('0', '{{ subjects[2].id }}');        
+        var url3 = url.replace('0', '{{ subjects[3].id }}');    
+        var pathValidAnswer = "{{ path('valid_answer') }}";
         
-            // end of game
-            if (cumulDiceGamer1 == 64) {
-                $('.board .win').addClass('activeCase');
-                alert('gagné !');
-                return false;                    
-            }
-            
-        })
-    });
     </script>
 
 {% endblock %}
