correction ajax answer

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -20,7 +20,7 @@
 
 
     <div id="modal">
-        <div id="signature">
+        <div id="window">
             <button class="close">
                 <span class="glyphicon glyphicon-remove-circle"></span>
             </button>
