--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -2,8 +2,6 @@
 
 {% extends "GameBundle::layout.html.twig" %}
 {% set game = true %}
-{% set idAns = 0 %}
-{% set idGam = 0 %}
 
 {% block title %}{{ parent() }} - {{ titleTab }}{% endblock %}
 
@@ -157,10 +155,11 @@
             {% for gamer in gamers %}
                 <div class="stats">
                     <p><strong>{{ gamer.username }}</strong></p>
-                    <p>Meilleur score : {{ gamer.bestScore }}</p>
-                    <p>Nombre de parties gagnées : {{ gamer.gameWonNb }}</p>
-                    <p>Nombre de bonnes réponses : {{ gamer.rightAnswerNb }}</p>
-                    <p>Niveau : {{ gamer.level }}</p>
+                    <p>Score sur la partie : <span>0</span></p>
+                    <p>Meilleur score : <span>{{ gamer.bestScore }}</span></p>
+                    <p>Nombre de parties gagnées : <span>{{ gamer.gameWonNb }}</span></p>
+                    <p>Nombre de bonnes réponses : <span>{{ gamer.rightAnswerNb }}</span></p>
+                    <p>Niveau : <span>{{ gamer.level }}</span></p>
                     <p>{{ gamer.id }}</p>
                 </div>
             {% endfor %}
@@ -176,9 +175,7 @@
         var url2 = url.replace('0', '{{ subjects[2].id }}');        
         var url3 = url.replace('0', '{{ subjects[3].id }}');    
         
-
-        var pathValidAnswer = "{{ path('valid_answer', { 'answerId': idAns, 'gamerId': idGam }) }}";
-        
+        var pathValidAnswer = "{{ path('valid_answer', { 'answerId': 0, 'gamerId': 0, 'dice': 0, 'score': 0, 'bonus': 0 }) }}";
         
     </script>
 
