--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -21,9 +21,6 @@
 
     <div id="modal">
         <div id="window">
-            <button class="close">
-                <span class="glyphicon glyphicon-remove-circle"></span>
-            </button>
             <div class="questions">
                 <div class="infoQuestion">
                     Difficulté : <div class="difficulty"></div>
@@ -40,12 +37,8 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 center">
             <h2>{{ title }}</h2>            
-
-            <div class="messageInfo">
-                <p>C'est au joueur <strong></strong> de commencer.</p>
-            </div>
 
             <!-- Button trigger modal -->
             <button class="buttonDice btn btn-primary">
@@ -59,6 +52,13 @@
                 <img class="die4" src="{{ asset('bundles/GameBundle/images/quatre.png') }}" alt="numéro quatre" />
                 <img class="die5" src="{{ asset('bundles/GameBundle/images/cinq.png') }}" alt="numéro cinq" />
                 <img class="die6" src="{{ asset('bundles/GameBundle/images/six.png') }}" alt="numéro six" />
+            </div>
+            
+            <div class="messageInfo">
+                <p>C'est au joueur <strong></strong> de commencer.</p>
+            </div>
+            <div class="rightOrWrongAnswer">
+                
             </div>
 
         </div>
@@ -176,6 +176,8 @@
         var url3 = url.replace('0', '{{ subjects[3].id }}');    
         
         var pathValidAnswer = "{{ path('valid_answer', { 'answerId': 0, 'gamerId': 0, 'dice': 0, 'score': 0, 'bonus': 0 }) }}";
+        
+        var pathBestScore = "{{ path('change_best_score', { 'bestScore': 0, 'gamerIdBis': 0 }) }}";
         
     </script>
 
