alternance des joueurs

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -55,7 +55,7 @@
             </div>
             
             <div class="messageInfo">
-                <p>C'est au joueur <strong></strong> de commencer.</p>
+                <p>C'est au joueur <strong></strong> de jouer.</p>
             </div>
             <div class="rightOrWrongAnswer">
                 
