chaque joueur a son pion.

--- a/web/bundles/GameBundle/main.css
+++ b/web/bundles/GameBundle/main.css
@@ -31,8 +31,12 @@ table.board td {
 .board td.rouge {
     background-color: orangered; 
 }
-.activeCase{
+.activeCase1{
     background: url("images/emoticon.png") no-repeat center;
+    color: transparent;
+}
+.activeCase2{
+    background: url("images/pion.png") no-repeat center;
     color: transparent;
 }
 .board .borderTop {
