--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -155,12 +155,12 @@
                 <div class="stats">
                     <p><strong>{{ gamer.username }}</strong></p>
                     <p>Score sur la partie : <span>0</span> points</p>
-                    <p>Score total : <span>{{ gamer.cumulScore }}</span> points</p>
+                    {#<p>Score total : <span>{{ gamer.cumulScore }}</span> points</p>
                     <p>Meilleur score : <span>{{ gamer.bestScore }}</span> points</p>
                     <p>Nombre de parties gagnées : <span>{{ gamer.gameWonNb }}</span></p>
                     <p>Nombre de bonnes réponses : <span>{{ gamer.rightAnswerNb }}</span></p>
                     <p>Niveau : <span>{{ gamer.level }}</span></p>
-                    <p>{{ gamer.id }}</p>
+                    <p>{{ gamer.id }}</p>#}
                 </div>
             {% endfor %}
         </div>
