--- a/web/bundles/GameBundle/main.css
+++ b/web/bundles/GameBundle/main.css
@@ -103,10 +103,14 @@ a {
 .formTheme, .formTopic, .toHide {
     display: none; 
 }
-.gamer, .stats, .chooseSubject {
+.gamer, .chooseSubject {
     background-color:whitesmoke; 
     display:inline-block; 
     padding:20px; 
+    margin: 10px;
+}
+.stats {
+    display:inline-block; 
     margin: 10px;
 }
 .questions {
