--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>{% block title %}Le jeu de loi ludique{% endblock %}</title>
+        <title>{% block title %}Le jeu de loi érudit{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
             <link rel="stylesheet" type='text/css' href="{{ asset('bundles/GameBundle/main.css') }}">
