images des pions à côté des pseudos

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -155,6 +155,7 @@
             {% for gamer in gamers %}
                 <div class="panel panel-default stats">
     
+                    <div class="pion"></div>
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#accordion{{ gamer.id }}">
